--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,13 @@ repositories {
 }
 
 dependencies {
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
     compile 'com.google.code.gson:gson:2.8.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 jar {
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     manifest {
         attributes(
                 'Main-Class': 'pro.eugw.MessageDownloader.Main'
