--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,10 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.8.2'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8.2'
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
-    compile 'com.google.code.gson:gson:2.8.1'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
